--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "config": "^3.3.12",
+        "debug": "^4.4.0",
         "ejs": "^3.1.10",
         "express": "^4.21.2",
         "mongoose": "^8.9.2",
